<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/background_color"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Login"
                android:textColor="@android:color/white"
                android:textAppearance="?android:textAppearanceLarge"
                android:gravity="center"
                ></TextView>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/email"
                android:background="@drawable/edittext_background"
                android:padding="15dp"
                android:textColor="@android:color/white"
                android:id="@+id/etEmail_log"
                ></EditText>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/password"
                android:background="@drawable/edittext_background"
                android:padding="15dp"
                android:textColor="@android:color/white"
                android:id="@+id/etPassword_log"
                ></EditText>

           <Button
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_margin="10dp"
               android:id="@+id/btn_login"
               android:text="@string/login_btn"
               android:background="@drawable/edittext_background"
               android:textColor="@android:color/white"
               android:textAppearance="?android:textAppearanceLarge"
               ></Button>
            
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:id="@+id/forget_password"
                android:textColor="@android:color/white"
                android:text="@string/forget_pass"
                android:padding="5dp"
                ></TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:id="@+id/sign_up"
                android:text="@string/No_acc"
                android:padding="5dp"
                ></TextView>



        </LinearLayout>

    </ScrollView>

</LinearLayout>